# mupen64-rr-lua

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Core.Dependencies.props  Core.Tests.vcxproj  Core.vcxproj  Plugins.Audio.Dummy.vcxproj  Plugins.Input.Dummy.vcxproj  Plugins.RSP.Dummy.vcxproj  Plugins.RSP.TAS.vcxproj  Plugins.Video.Dummy.vcxproj  Plugins.props  README.md  Shared.props  Views.Win32.vcxproj  cliff.toml  mupen64.sln  packages.config  vcpkg.json
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_proposal.md
.github/workflows/: main.yml
lib/: IIOHelperService.h
src/: CMakeLists.txt  api.lua  sandbox.lua  shims.lua
src/Common/: CMakeLists.txt  MiscHelpers.h  PlatformService.h
src/Core/: CMakeLists.txt  Core.cpp  Core.h  alloc.cpp  alloc.h  cheats.cpp  cheats.h  stdafx.h
src/Core/include/: PlatformService.h  core_api.h  core_plugin.h  core_types.h
src/Core/memory/: dma.cpp  flashram.cpp  flashram.h  memory.cpp  memory.h  pif.cpp  pif_lut.cpp  savestates.cpp  savestates.h  summercart.cpp  summercart.h  tlb.cpp  tlb.h
src/Core/r4300/: bc.cpp  cop0.cpp  cop1.cpp  cop1_d.cpp  cop1_helpers.cpp  cop1_helpers.h  cop1_l.cpp  cop1_s.cpp  cop1_w.cpp  debugger.cpp  debugger.h  disasm.cpp  disasm.h  exception.cpp  interrupt.cpp  interrupt.h  macros.h  pure_interp.cpp  r4300.cpp  r4300.h  recomp.cpp  recomp.h  recomph.h  regimm.cpp  rom.cpp  rom.h  special.cpp  timers.cpp  timers.h  tracelog.cpp  tracelog.h  vcr.cpp  vcr.h
src/Core/r4300/x86/: assemble.cpp  assemble.h  gbc.cpp  gcop1.cpp  gcop1_d.cpp  gcop1_helpers.cpp  gcop1_l.cpp  gcop1_s.cpp  gcop1_w.cpp  gr4300.cpp  gregimm.cpp  gspecial.cpp  regcache.cpp  regcache.h
src/Plugins.Audio.Dummy/: CMakeLists.txt  Main.cpp  Main.h
src/Plugins.Input.Dummy/: CMakeLists.txt  Main.cpp  Main.h
src/Plugins.RSP.Dummy/: CMakeLists.txt  Main.cpp  Main.h
src/Plugins.RSP.TAS/: CMakeLists.txt  Config.cpp  Config.h  Disasm.cpp  Disasm.h  HLE.h  JPEG.cpp  MP3.cpp  Main-New.cpp  Main.cpp  Main.h  Resource.rc  UCode1.cpp  UCode2.cpp  UCode3.cpp
src/Plugins.Video.Dummy/: CMakeLists.txt  Main.cpp  Main.h
src/Views.Win32/: ActionManager.cpp  ActionManager.h  CMakeLists.txt  Config.cpp  Config.h  DialogService.cpp  Hotkey.cpp  Hotkey.h  Main.cpp  Main.h  Messenger.h  MiscHelpers.h  Plugin.cpp  Plugin.h  ResizeAnchor.cpp  ResizeAnchor.h  Resource.rc  ThreadPool.cpp  ViewHelpers.h  resource.h  rsrc.rc  stdafx.h
src/Views.Win32/capture/: EncodingManager.cpp
src/Views.Win32/capture/encoders/: AVIEncoder.cpp  FFmpegEncoder.cpp  VFWEncoder.cpp  VFWEncoder.h
src/Views.Win32/components/: AboutDialog.cpp  AboutDialog.h  ActionMenu.cpp  ActionMenu.h  AppActions.cpp  AppActions.h  Benchmark.cpp  CLI.cpp  Cheats.cpp  CommandPalette.cpp  CommandPalette.h  Compare.cpp  ConfigDialog.cpp  ConfigDialog.h  CoreDbg.cpp  CrashManager.cpp  FilePicker.cpp  HotkeyTracker.cpp  HotkeyTracker.h  LuaDialog.cpp  LuaDialog.h  MGECompositor.cpp  MovieDialog.cpp  PianoRoll.cpp  RecentItems.cpp  RecentItems.h  RecentMenu.cpp  RomBrowser.cpp  RomBrowser.h  Runner.cpp  Seeker.cpp  Seeker.h  SettingsListView.cpp  Statusbar.cpp  Statusbar.h  TextEditDialog.cpp  TextEditDialog.h  UpdateChecker.cpp
src/Views.Win32/lua/: LuaCallbacks.cpp  LuaCallbacks.h  LuaConsole.cpp  LuaConsole.h  LuaManager.cpp  LuaManager.h  LuaRegistry.cpp  LuaRenderer.cpp  LuaRenderer.h  LuaTypes.h
src/Views.Win32/lua/modules/: Action.h  Clipboard.h  D2D.h  Emu.h  Global.h  Hotkey.h  IOHelper.h  Input.h  Joypad.h  Memory.h  Movie.h  Savestate.h  WGUI.h
src/Views.Win32/lua/presenters/: DCompPresenter.cpp  DCompPresenter.h  GDIPresenter.cpp
test/: CMakeLists.txt
test/Core.Tests/: CMakeLists.txt  vcr_tests.cpp
test/core/: stdafx.h  test.cpp  vcr_tests.cpp
test/lua/: 336.lua  action_system.lua  hotkey_prompt.lua  mupen64.lua  os.exit.lua  prelude.lua  tests.lua  untrusted-apis.lua
test/lua/manual/: 302.lua  336.lua  action_system.lua  base_manual_test.lua  hotkey_prompt.lua  input.prompt.lua  os.exit.lua  print_in_atstop.lua  print_in_global.lua  untrusted_apis.lua
toolchains/: vcpkg-win64.cmake
